# dwr

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix
examples/: main.lua
memfd/: Cargo.toml
memfd/src/: lib.rs
src/: error.rs  gl.rs  gpu_surface.rs  layer.rs  lib.rs  main.rs  shaders.rs  state.rs  surface.rs
src/lua/: entry.rs  mod.rs  rendering.rs
src/opengl/: highlevel.rs  mod.rs  shaders.rs  types.rs
src/opengl/shaders/: flat_color.frag  flat_color.vert  quad_color.vert
src/shaders/: flat_color.vert
