[package]
name = "dwr"
version = "0.1.0"
edition = "2024"

[dependencies]
wayland-backend = { version = "0.3.11", features = ["client_system", "raw-window-handle", "rwh_06"] }
wayland-client = "0.31.11"
wayland-protocols = { version = "0.32.9", features = ["client", "unstable"] }
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
wayland-egl = "0.32.8"

memfd = { path = "memfd" }

raw-window-handle = "0.6.2"
glutin = { version = "0.32.3", features = ["wayland", "egl", "wayland-sys"], default-features = false }
glcore-rs = "0.3.3"

mlua = { version = "0.11.5", features = ["luajit", "module"] }
